# backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-preprocessing-pdf.txt  requirements.txt  태그
api/: main.py
colab/: COLAB_USAGE.md  StructVerify_Colab_Runner.ipynb
config/: default_example.yaml
domain-packs/: registry.yaml
scripts/: createTables_save.py  dbConnect.py  env_session.sh  load_kosis_catalog_json.py  openapi_noSave_test.py  openapi_yesSave_test.py  push_results.sh  run_layer.sh  run_pipeline.sh
structverify/: __init__.py
structverify/adaptation/: adapter_trainer.py  feedback_store.py  kosis_crawler.py  sample_builder.py  synthetic_generator.py  update_embeddings.py
structverify/agent/: builder_agent.py  runtime_agent.py
structverify/core/: config_loader.py  pipeline.py  schemas.py
structverify/detection/: candidate_scorer.py  claim_detector.py  domain_classifier.py  schema_inductor.py  synthetic_generator.py
structverify/explanation/: explainer.py
structverify/graph/: graph_builder.py  graph_store.py  provenance.py
structverify/preprocessing/: Dockerfile.scraper  extractor.py  scraper_sandbox.py  segmenter.py  sir_builder.py
structverify/preprocessing/pdf/: __init__.py  fields.py  markdown.py  models.py  ocr.py  pipeline.py  reader.py  scoring.py
structverify/retrieval/: base_connector.py  evidence_subgraph.py  kosis_connector.py  query_builder.py
structverify/storage/: db_manager.py  dwh_manager.py  init_db.py  raw_storage.py
structverify/utils/: llm_client.py  logger.py
structverify/verification/: verifier.py
test_outputs/: claim_graph.html  claim_graph_1.html  claim_graph_step1_9.html  step1_9_pipeline_result.json
tests/: test_client_llm.py  test_llm_client.py  test_pipeline.py  test_step1-9_v3_pipeline.py  test_step1_6_detection.py  test_step1_9_pipeline.py  test_step3_5_detection.py  test_step9_explainer.py
tools/: common.py  factcheck_test.py  kosis_test.py  run_layer.py  run_pipeline.py
