[project]
name = "structverify"
version = "0.2.0"
description = "도메인 독립형 LLM 기반 사실검증 플랫폼 — Graph + 2-Agent 아키텍처"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "trafilatura>=1.8",
    "pymupdf>=1.23",
    "python-docx>=1.1",
    "kss>=6.0",
    "boto3>=1.34",
    "openai>=1.10",
    "langfuse>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "neo4j>=5.0",
    "snowflake-connector-python>=3.6",
    "mlflow>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.2", "mypy>=1.8"]
peft = ["peft>=0.8", "transformers>=4.38", "torch>=2.1"]
# PDF 추출 파이프라인 (preprocessing.pdf) 선택 의존성
#   docling/bs4/lxml : 구조화 추출 + HTML 파싱
#   pillow           : OCR 입력 이미지 핸들링
#   easyocr          : 한국어 OCR 기본 백엔드 (벤치에서 Tesseract 대비 우수)
#   pytesseract      : 영문 위주 문서용 대체 백엔드
pdf = [
    "docling>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pillow>=10.0",
    "easyocr>=1.7",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["structverify*", "api*"]
