[project]
name = "structverify"
version = "0.2.0"
description = "도메인 독립형 LLM 기반 사실검증 플랫폼 — Graph + 2-Agent 아키텍처"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "trafilatura>=1.8",
    "pymupdf>=1.23",
    "python-docx>=1.1",
    "kss>=6.0",
    "boto3>=1.34",
    "openai>=1.10",
    "langfuse>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "neo4j>=5.0",
    "snowflake-connector-python>=3.6",
    "mlflow>=2.10",
    "python-dotenv",
    "json5>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.2", "mypy>=1.8"]
peft = ["peft>=0.8", "transformers>=4.38", "torch>=2.1"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["structverify*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env_files = [".env"] 
    
[tool.ruff]
line-length = 100
